--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "contentful-lib-helpers"
   ],
   "engines": {
-    "node": ">=14"
+    "node": ">=14.18.0",
+    "npm": ">=8.5.5"
   },
   "repository": {
     "type": "git",
@@ -26,17 +27,21 @@
     "lint-fix": "node_modules/eslint/bin/eslint.js --resolve-plugins-relative-to ./ --ext js,mjs,cjs,jsx,ts,tsx ./lib --fix"
   },
   "dependencies": {
-    "contentful-management": ">7.50.0"
+    "contentful-management": ">7.50.0",
+    "natural-orderby": "^2.0.3"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.54.1",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.0.0",
     "dotenv": "^16.0.3",
     "eslint": "^8.35.0",
     "eslint-config-prettier": "^8.7.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-react-hooks": "^4.6.0"
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "prettier": "^3.0.0",
+    "typescript": "^4.4.3"
   }
 }
