--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "contentful-lib-helpers"
   ],
   "engines": {
-    "node": ">=14.18.0",
-    "npm": ">=8.5.5"
+    "node": ">=14.18.0"
   },
   "repository": {
     "type": "git",
