--- a/.npmignore
+++ b/.npmignore
@@ -1,11 +1,13 @@
+.vscode
+.vscode/*
 build/*
-lib/in-progress
-lib/in-progress/*
 lib/assets
 lib/assets/*
+lib/in-progress
+lib/in-progress/*
 node_modules/*
+.DS_Store
 .env
 .env*
 test.js
 test*.js
-.DS_Store
